--- a/find_module_prototype.ipynb
+++ b/find_module_prototype.ipynb
@@ -325,23 +325,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 59,
    "id": "23e98060",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3]"
+       "9109      ENA_KJ645900_KJ645900.1_246857_246081_265\n",
+       "33694        ENA_KJ645900_KJ645900.1_16565_17224_19\n",
+       "34898        ENA_KJ645900_KJ645900.1_13577_14275_15\n",
+       "140728    ENA_KJ645900_KJ645900.1_133148_132465_136\n",
+       "142078    ENA_KJ645900_KJ645900.1_330172_330837_352\n",
+       "179374    ENA_KJ645900_KJ645900.1_335709_336482_359\n",
+       "Name: Feature_id, dtype: object"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted({1,3,2})"
+    "# temp cell\n",
+    "data[data.feature_number == 13032].Feature_id"
    ]
   },
   {
@@ -1653,7 +1660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
