experiment with fair-esm

--- a/windowd_approach.ipynb
+++ b/windowd_approach.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "75e9832d",
    "metadata": {
     "pycharm": {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "082f34c0",
    "metadata": {
     "pycharm": {
@@ -102,7 +102,7 @@
        "1         44900                      68  Uncharacterized protein  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "952cab9f",
    "metadata": {
     "pycharm": {
@@ -129,7 +129,7 @@
        " ('ENA_AY940168_AY940168.2_57144_79082_90', '1')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "f21c31f8",
    "metadata": {
     "pycharm": {
@@ -218,7 +218,7 @@
        "1           43194  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "7722f2a2",
    "metadata": {
     "pycharm": {
@@ -312,7 +312,7 @@
        "1           43194         234989  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "744f508e",
    "metadata": {
     "pycharm": {
@@ -399,7 +399,7 @@
        "25595                      135"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "id": "065a0b2d",
    "metadata": {
     "pycharm": {
@@ -435,7 +435,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "id": "7b473c37",
    "metadata": {
     "pycharm": {
@@ -479,7 +479,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "id": "9a469f01",
    "metadata": {
     "pycharm": {
@@ -576,7 +576,7 @@
        "(8867, 25595)              135"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "id": "3a895b88",
    "metadata": {
     "pycharm": {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "id": "b559f3f3",
    "metadata": {
     "pycharm": {
@@ -706,7 +706,7 @@
        "(6051, 25595)             134     134     135  0.996283"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "id": "a9023ab1",
    "metadata": {
     "pycharm": {
@@ -751,7 +751,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "id": "778e3dff",
    "metadata": {
     "pycharm": {
@@ -834,7 +834,7 @@
        "(6051, 8867, 25595)              134"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "id": "f8e118d1",
    "metadata": {
     "pycharm": {
@@ -948,7 +948,7 @@
        "(6051, 8867, 25595)              134     134     135     135  0.995050"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 27,
    "id": "82b61ce7",
    "metadata": {
     "pycharm": {
@@ -1069,7 +1069,7 @@
        "(8867, 21058, 25595)             122     135     122     135  0.933673"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 28,
    "id": "8f13fa88",
    "metadata": {
     "pycharm": {
@@ -1114,7 +1114,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 29,
    "id": "6faba395",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1193,7 @@
        "(6051, 8867, 21058, 25595)              121"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 30,
    "id": "d209fdd5",
    "metadata": {
     "pycharm": {
@@ -1322,7 +1322,7 @@
        "(6051, 8867, 21058, 25595)   0.920152  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "id": "b98ed164",
    "metadata": {
     "pycharm": {
@@ -1460,7 +1460,7 @@
        "(3929, 6051, 8867, 21058)   0.920152  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 32,
    "id": "b31a5751",
    "metadata": {
     "pycharm": {
@@ -1505,7 +1505,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "id": "82cf5f42",
    "metadata": {
     "pycharm": {
@@ -1588,7 +1588,7 @@
        "(3929, 6051, 8867, 25595, 57763)               25"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "id": "5de5d532",
    "metadata": {
     "pycharm": {
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 35,
    "id": "225afd38",
    "metadata": {
     "pycharm": {
@@ -1742,7 +1742,7 @@
        "(3929, 6051, 8867, 25595, 57763)      135      25  0.221631  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1755,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 36,
    "id": "c08fabd5",
    "metadata": {
     "pycharm": {
@@ -1958,7 +1958,7 @@
        "[180 rows x 7 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 37,
    "id": "d99fcd00",
    "metadata": {
     "pycharm": {
@@ -2092,7 +2092,7 @@
        "(3929, 6051, 8867, 25595, 44650)      135      96  0.748031  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2103,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 38,
    "id": "1c32c5ee",
    "metadata": {
     "pycharm": {
@@ -2177,7 +2177,7 @@
        " 60695: 1}"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "3ccb1802",
    "metadata": {},
    "outputs": [
@@ -2200,7 +2200,7 @@
        "Name: annotation_val, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2211,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 40,
    "id": "e6a99e97",
    "metadata": {
     "pycharm": {
@@ -2728,7 +2728,7 @@
        "(3929, 20761, 25595, 54963, 60496)      13      11  0.132013  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2739,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 41,
    "id": "92f44f3f",
    "metadata": {
     "pycharm": {
@@ -2756,7 +2756,7 @@
        "      dtype='object', name='combination')"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2768,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 42,
    "id": "6cfad05f",
    "metadata": {
     "pycharm": {
@@ -3283,7 +3283,7 @@
        " [44650, 25595, 6051, 21058, 8867, 3929]]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3298,7 +3298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 43,
    "id": "9bda307c",
    "metadata": {
     "pycharm": {
@@ -3323,7 +3323,7 @@
        "         28062: 1})"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3334,7 +3334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 58,
    "id": "7cfa937f",
    "metadata": {
     "pycharm": {
@@ -3345,27 +3345,106 @@
     {
      "data": {
       "text/plain": [
-       "{'Unknown'}"
+       "Counter({'Unknown': 11})"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set(data[data.cluster_number == 44650].annotation_val)"
+    "Counter(data[data.cluster_number == 60496].annotation_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "5c36ab21",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45952 Counter({'Unknown': 7})\n",
+      "3968 Counter({'DNA polymerase': 6, 'DNA_directed DNA polymerase': 1})\n",
+      "56322 Counter({'Unknown': 3})\n",
+      "6150 Counter({'Unknown': 3})\n",
+      "25595 Counter({'External scaffolding protein D': 69, 'Unknown': 66})\n",
+      "1675 Counter({'Putative intein containing helicase': 3, 'Putative helicase': 2, 'DNA helicase': 1, 'Helicase': 1})\n",
+      "40332 Counter({'Unknown': 4})\n",
+      "52114 Counter({'Unknown': 4})\n",
+      "55189 Counter({'Uncharacterized protein': 4})\n",
+      "35990 Counter({'Unknown': 9})\n",
+      "5911 Counter({'Virion export protein': 5, 'IV': 4, 'Phage assembly protein': 1, 'IV protein': 1})\n",
+      "26775 Counter({'Unknown': 4})\n",
+      "20761 Counter({'Unknown': 9})\n",
+      "29846 Counter({'Unknown': 4})\n",
+      "19989 Counter({'Mannosyl_glycoprotein endo_beta_N_acetylglucosaminidase': 4})\n",
+      "7452 Counter({'Replication initiation factor': 4})\n",
+      "19993 Counter({'Unknown': 5})\n",
+      "26394 Counter({'Unknown': 7})\n",
+      "17439 Counter({'Unknown': 7})\n",
+      "46748 Counter({'Unknown': 7})\n",
+      "12322 Counter({'Unknown': 7})\n",
+      "6051 Counter({'Unknown': 134})\n",
+      "8867 Counter({'Unknown': 135})\n",
+      "57763 Counter({'Unknown': 21, 'Phage C family protein': 4})\n",
+      "6186 Counter({'Attachment protein G3P': 4, 'III protein': 3, 'Structural protein': 1})\n",
+      "22142 Counter({'Unknown': 4})\n",
+      "29868 Counter({'Replication_associated protein G2P': 3, 'Unknown': 2})\n",
+      "3890 Counter({'Unknown': 6})\n",
+      "54963 Counter({'Unknown': 13})\n",
+      "12983 Counter({'Unknown': 7})\n",
+      "15929 Counter({'Unknown': 4})\n",
+      "23189 Counter({'Unknown': 26})\n",
+      "21058 Counter({'Unknown': 122})\n",
+      "26562 Counter({'Unknown': 5})\n",
+      "54980 Counter({'Unknown': 7})\n",
+      "3397 Counter({'Unknown': 7})\n",
+      "6594 Counter({'Unknown': 17, 'Uncharacterized protein': 7})\n",
+      "34244 Counter({'Unknown': 12})\n",
+      "32842 Counter({'Unknown': 4})\n",
+      "7884 Counter({'Unknown': 13})\n",
+      "28364 Counter({'Unknown': 3})\n",
+      "60496 Counter({'Unknown': 11})\n",
+      "14295 Counter({'Unknown': 4})\n",
+      "50392 Counter({'Unknown': 8})\n",
+      "3929 Counter({'Unknown': 128, 'A protein': 5, 'Replication_associated protein A': 2})\n",
+      "44377 Counter({'Unknown': 3})\n",
+      "60695 Counter({'Unknown': 16})\n",
+      "46302 Counter({'Unknown': 4})\n",
+      "8798 Counter({'Unknown': 7})\n",
+      "7266 Counter({'Uncharacterized protein': 2, 'Plasmid pJTPS1 DNA, complete sequence': 1, 'Putative phage DNA replicase': 1})\n",
+      "7912 Counter({'Unknown': 3})\n",
+      "44650 Counter({'Unknown': 96})\n",
+      "42222 Counter({'Unknown': 3})\n",
+      "46703 Counter({'Protein VP5': 3})\n",
+      "62832 Counter({'Unknown': 4})\n",
+      "42607 Counter({'Unknown': 7})\n",
+      "36734 Counter({'Unknown': 3})\n",
+      "11892 Counter({'Unknown': 7, 'Replication_associated protein G2P': 1})\n",
+      "63732 Counter({'Unknown': 5})\n",
+      "45051 Counter({'Unknown': 9})\n",
+      "33150 Counter({'Unknown': 11})\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,j in Counter(list(itertools.chain(*combination_5_counts_filtered.index.tolist()))):\n",
+    "        print(i, Counter(data[data.cluster_number == i].annotation_val))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2376b0d8",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -3386,7 +3465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
